Test Concept: Green Spot Disease

--- a/acpedagogy_examples.html
+++ b/acpedagogy_examples.html
@@ -22,7 +22,10 @@
 		//<![CDATA[
 		scale = 0.5;
 		flower_props = [
-			{},
+			{
+				col2: "#00ff00", //spots color
+				tar2: 1, 		// has spots?
+			},
 			{
 				col1: "#ff0000", //stem color
 				col2: "#ff0000", //spots color
@@ -33,7 +36,7 @@
 				prop2: 1, 	//petallength
 				tar1: 1, 	// has thorns?
 				tar2: 1, 	// has spots?
-				tar3: 1 		//has filaments?
+				tar3: 1 	//has filaments?
 			}
 		];
 
